@@ -56,11 +56,13 @@
 			<label index="text_submit_short">Search</label>
 			<label index="text_submit_long">Search now!</label>
 			<label index="text_search_text">Search for:</label>
-			<label index="text_search_results">Search results:</label>
-			<label index="search_took">Search took %0.3f seconds</label>
-			<label index="result_range">Displaying results %1$d-%2$d of %3$d</label> <!-- + stdWrap for numbers! -->
-			<label index="page_range">Page %1$d of %2$d</label> <!-- + stdWrap for numbers! -->
+			<label index="text_search_results">Search results - </label>
+			<label index="search_took">Search took %s seconds</label>
+			<label index="search_took_short">%s seconds</label>
+			<label index="result_range">Displaying results %1$s-%2$s of %3$s</label> <!-- + stdWrap for numbers! -->
+			<label index="page_range">Page %1$s of %2$s</label> <!-- + stdWrap for numbers! -->
 			<label index="text_nothing_found">The search returned no results.</label>
+			<label index="text_additional_results">Similar pages</label>
 		</languageKey>
 	</data>
 </T3locallang>
