@@ -5,6 +5,7 @@
 <title>Search form template</title>
 <!-- ###HEADER_ADDITIONS### begin -->
 <link rel="stylesheet" href="###SITE_REL_PATH###res/styles.css" />
+<script type="text/javascript" src="###SITE_REL_PATH###res/scripts.js"></script>
 <!-- ###HEADER_ADDITIONS### end -->
 </head>
 <body>
@@ -13,7 +14,8 @@
 <!-- ###SHORT_SEARCH_FORM### begin -->
 <!--UdmComment-->
 <div class="tx-mnogosearch-short-search-form">
-	<form action="###SHORT_SEARCH_FORM_ACTION###" method="post">
+	<!-- WARNING! Do not change method to "post"! -->
+	<form action="###SHORT_SEARCH_FORM_ACTION###" method="get">
 		<input type="text" name="tx_mnogosearch_pi1[q]" value="###SHORT_SEARCH_FORM_VALUE###" />
 		<input type="submit" name="tx_mnogosearch_pi1[submit]" value="###TEXT_SEARCH###" />
 	</form>
@@ -32,12 +34,13 @@
 <!-- ###LONG_SEARCH_FORM### begin -->
 <!--UdmComment-->
 <div id="long-search-form">
-	<form id="" class="tx-mnogosearch-long-form" action="###LONG_SEARCH_FORM_ACTION###" method="post">	<!-- map: action, name, id -->
+	<!-- WARNING! Do not change method to "post"! -->
+	<form class="tx-mnogosearch-long-form" action="###LONG_SEARCH_FORM_ACTION###" method="get">
 		<table>
 			<tr><td>
 				Search for:
 			</td><td colspan="3">
-				<input size="50" type="text" name="tx_mnogosearch_pi1[q]" value="###LONG_SEARCH_FORM_VALUE###" />	<!-- map: value -->
+				<input size="50" type="text" name="tx_mnogosearch_pi1[q]" value="###LONG_SEARCH_FORM_VALUE###" />
 			</td></tr>
 			<tr><td>
 			</td><td>
@@ -58,46 +61,53 @@
 <hr />
 <!-- ###SEARCH_RESULTS### begin -->
 <!--UdmComment-->
-<div class="tx-mnogosearch-search-results">
-	<div class="tx-mnogosearch-pi1-summary">
+<div id="tx-mnogosearch-search-results">
+	<div class="tx-mnogosearch-summary">
 		<!-- Search for: abc xyz -->
+		<!-- Hidden by default!
 		###TEXT_SEARCH_TEXT### ###SEARCH_RESULTS_TERMS###.
+		-->
 		<!-- Results: abc: 5, xyz: 6 -->
-		###TEXT_SEARCH_RESULTS### ###SEARCH_RESULTS_STATISTICS###.
+		###TEXT_SEARCH_RESULTS### ###SEARCH_RESULTS_STATISTICS### (###SEARCH_TOOK_SHORT###)
 		<!-- Search took: 0.001 seconds -->
+		<!-- Hidden by default
 		###SEARCH_TOOK###.
+		-->
 		<br />
 		<!-- Displaying results 1-10 of 100. Page 1 of 10. -->
 		###RESULT_RANGE###. ###PAGE_RANGE###.
 	</div>
-	<div class="tx-mnogosearch-pi1-results">
+	<div id="tx-mnogosearch-results">
 
 		<!-- ###SEARCH_RESULTS_EMPTY### begin -->
 			###TEXT_NOTHING_FOUND###
 		<!-- ###SEARCH_RESULTS_EMPTY### end -->
 
 		<!-- ###SEARCH_RESULTS_CONTENT### begin -->
-			<ol class="tx-mnogosearch-pi1-result" type="1" start="###SEARCH_RESULTS_FIRST###">
+			<ol id="tx-mnogosearch-result" type="1" start="###SEARCH_RESULTS_FIRST###">
 			<!-- ###SEARCH_RESULTS_RESULT### begin -->
 				<li>
-					<p class="tx-mnogosearch-pi1-result-data">
-					<a class="tx-mnogosearch-pi1-result-url" href="###SEARCH_RESULTS_RESULT_URL###">###SEARCH_RESULTS_RESULT_TITLE###</a>
-					<span class="tx-mnogosearch-pi1-result-relevancy">[<span>###SEARCH_RESULTS_RESULT_RELEVANCY###</span>%]</span>
-					</p>
-					<p class="tx-mnogosearch-pi1-result-excerpt">
+					<h3><a href="###SEARCH_RESULTS_RESULT_URL###">###SEARCH_RESULTS_RESULT_TITLE###</a></h3>
+					<p class="tx-mnogosearch-result-excerpt">
 						###SEARCH_RESULTS_RESULT_EXCERPT###
 					</p>
-					<p class="tx-mnogosearch-pi1-result-link">
-					###SEARCH_RESULTS_RESULT_URL###
+					<p class="tx-mnogosearch-result-url">
+						<span class="tx-mnogosearch-relevancy-bg-bar" title="###SEARCH_RESULTS_RESULT_RELEVANCY###%">
+							<span class="tx-mnogosearch-relelvancy-fg-bar" style="width: ###SEARCH_RESULTS_RESULT_RELEVANCY###%" title="###SEARCH_RESULTS_RESULT_RELEVANCY###%">.</span>
+						</span>
+						###SEARCH_RESULTS_RESULT_URL###
 					</p>
 					<!-- ###SEARCH_RESULTS_RESULT_LINKS### begin -->
-					<ul class="tx-mnogosearch-pi1-results-links">
-						<!-- ###SEARCH_RESULTS_RESULT_ALT_LINK### begin -->
-						<li>
-							<a href="###SEARCH_RESULTS_RESULT_ALT_LINK_URL###">###SEARCH_RESULTS_RESULT_ALT_LINK_TITLE###</a>
-						</li>
-						<!-- ###SEARCH_RESULTS_RESULT_ALT_LINK### end -->
-					</ul>
+					<div class="tx-mnogosearch-result-links">
+						<a href="javascript:void(0)" onclick="tx_mnogosearch_show_similar('###UNIQID###')">###TEXT_ADDITIONAL_RESULTS###</a>
+						<ul id="###UNIQID###">
+							<!-- ###SEARCH_RESULTS_RESULT_ALT_LINK### begin -->
+							<li>
+								<a href="###SEARCH_RESULTS_RESULT_ALT_LINK_URL###">###SEARCH_RESULTS_RESULT_ALT_LINK_TITLE###</a>
+							</li>
+							<!-- ###SEARCH_RESULTS_RESULT_ALT_LINK### end -->
+						</ul>
+					</div>
 					<!-- ###SEARCH_RESULTS_RESULT_LINKS### end -->
 				</li>
 			<!-- ###SEARCH_RESULTS_RESULT### end -->
@@ -105,18 +115,7 @@
 		<!-- ###SEARCH_RESULTS_CONTENT### end -->
 	</div>
 
-	<hr size="1" />
-	<!-- ###SEARCH_RESULTS_PAGER### begin -->
-	<div class="tx-mnogosearch-pi1-page-list">
-		<!-- ###SEARCH_RESULTS_PAGER_PREV### begin -->
-		<span><a href="###SEARCH_RESULTS_PAGER_PREV_LINK###">&laquo; Previous</a> |</span>
-		<!-- ###SEARCH_RESULTS_PAGER_PREV### end -->
-		<span><span class="tx-mnogosearch-pi1-pagelink">###SEARCH_RESULTS_PAGER_CURRENT_PAGE###</span></span>
-		<!-- ###SEARCH_RESULTS_PAGER_NEXT### -->
-		<span>| <a href="###SEARCH_RESULTS_PAGER_NEXT_LINK###">Next &raquo;</a></span>
-		<!-- ###SEARCH_RESULTS_PAGER_NEXT### end -->
-	</div>
-	<!-- ###SEARCH_RESULTS_PAGER### end -->
+	###PAGE_BROWSER###
 </div>
 <!--/UdmComment-->
 <!-- ###SEARCH_RESULTS### end -->
