@@ -1,3 +1,11 @@
+21-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Changed template file to add more markers, look like Google, use pagebrowse extension
+
+15-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Added template file and more markers
+
 14-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fixed problem: URL log was never emptied
